2004-06-18 23:40 Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 0.7.7
	
2004-06-15 01:28 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormPalettesManager.m: [GormPalettesManager mouseDown:] a
	call to convertRect:toView: was added to correctly translate the
	view being dragged in all cases.   This will show no real benefit
	until Alex M. adds the window decoration patches.
	
2004-06-10 01:28 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: [Gorm testInterface] added code in the exception
	handler to show an alert panel when an exception occurs along
	with a warning (and the actual exception, of course).  This
	allows users to see what the issue was when trying to test
	the interface.
	
2004-06-07 23:59 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInspectorsManager.m: [GormConnectionInspector setObject:]
	corrected code to call "isConnecting" before blindly causing the
	inspector to show the connection on the selected object.  This
	was interfering with the user making connections in some cases.
	
2004-06-06 21:57 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/GormNSOutlineView.h: added ivar
	_savedColor.  This is used to save the color during selection.
	* Palettes/3Containers/GormNSTableView.h: same as above.
	* Palettes/3Containers/GormNSTableView.m: implemented select
	and unselect methods to allow the color to be saved when the object
	is selected.
	* Palettes/3Containers/GormNSOutlineView.m: same as above.
	
2004-06-06 08:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormImageEditor.m: Corrected comments.
	
2004-06-04 23:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormImageEditor.m: Added some code to correct a problem found
	by Riccardo Mattolla and Sungjin Chun.   The code is as suggested
	by Sujin, to return when the superview is not available.
	* GormSoundEditor.m: same as above.
	NOTE: This was due to a recent change to load all images for