@@ -14,9 +14,9 @@
     ApplicationDescription = "[GNUstep | Graphica] Object Relationship Modeller";
     ApplicationIcon = "Gorm.tiff";
     ApplicationName = "Gorm";
-    ApplicationRelease = "Gorm 0.7.7 (Release)";
+    ApplicationRelease = "Gorm 0.7.8 (Alpha)";
     Authors = ("Gregory John Casamento <greg_casamento@yahoo.com>","Richard Frith-Macdonald <rfm@gnu.org>","Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>");
     Copyright = "Copyright (C) 1999, 2000, 2001, 2002, 2003 FSF";
     CopyrightDescription = "Released under the GNU General Public License 2.0";
-    NSBuildVersion = "0.7.7 June 18 2004";
+    NSBuildVersion = "0.7.8 June 21 2004";
 }
